--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -112,7 +112,7 @@ hapi:
     tester:
         home:
           name: Local Tester
-          server_address: 'http://localhost:8080/fhir'
+          server_address: 'http://localhost:$PORT/fhir'
           refuse_to_fetch_third_party_urls: false
           fhir_version: R4
         global:
@@ -155,3 +155,5 @@ hapi:
 #  protocol: 'http'
 #  schema_management_strategy: CREATE
 #  username: SomeUsername
+server:
+  port: {$PORT:8080}
