--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -42,7 +42,7 @@ hapi:
 ### alternatively, it may be set using the X-Forwarded-Proto header.
 #   use_apache_address_strategy_https: false
 ### enable to set the Server URL
-  server_address: https://infinite-forest-29440.herokuapp.com/baseR4
+  server_address: https://hapifhir-server.herokuapp.com/
 #    defer_indexing_for_codesystems_of_size: 101
 #    install_transitive_ig_dependencies: true
 #    implementationguides:
