--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -42,7 +42,7 @@ hapi:
 ### alternatively, it may be set using the X-Forwarded-Proto header.
 #   use_apache_address_strategy_https: false
 ### enable to set the Server URL
-  server_address: https://hapifhir-server.herokuapp.com/
+    server_address: https://hapifhir-server.herokuapp.com
 #    defer_indexing_for_codesystems_of_size: 101
 #    install_transitive_ig_dependencies: true
 #    implementationguides:
@@ -112,7 +112,7 @@ hapi:
     tester:
         home:
           name: Local Tester
-          server_address: 'http://localhost:8080/fhir'
+          server_address: 'http://localhost:{$PORT:8080}/fhir'
           refuse_to_fetch_third_party_urls: false
           fhir_version: R4
         global:
