--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -111,7 +111,7 @@ hapi:
     tester:
         home:
           name: Local Tester
-          server_address: 'http://localhost:8080/fhir'
+          server_address: 'https://hapifhir-server.herokuapp.com/fhir'
           refuse_to_fetch_third_party_urls: false
           fhir_version: R4
         global:
