change supported resources

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -54,9 +54,22 @@ hapi:
         url: https://build.fhir.org/ig/HL7/fhir-ips/package.tgz
         name: hl7.fhir.uv.ips
         version: 1.0.0
-#    supported_resource_types:
-#      - Patient
-#      - Observation
+    supported_resource_types:
+      - Patient
+      - Observation
+      - Binary
+      - Questionaire
+      - StructureDefinition 
+      - ImplementationGuide
+      - CapabilityStatement
+      - SearchParameter
+      - MessageDefinition 
+      - OperationDefinition
+      - CompartmentDefinition
+      - StructureMap
+      - GraphDefinition
+      - ExampleScenario
+      - MedicationKnowledge
 
 #    allow_cascading_deletes: true
 #    allow_contains_searches: true
