--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,13 +1,13 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Java CI with Maven and deploy heroku
 
 on:
   push:
-    branches: [ master ]
+    branches: [ onlyjavaheroku ]
   pull_request:
-    branches: [ master ]
+    branches: [ onlyjavaheroku ]
 
 jobs:
   build:
@@ -22,3 +22,9 @@ jobs:
         java-version: 11
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: deploy heroku
+      uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      with:
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: ${{secrets.HEROKU_APP_NAME_JAVA}}
+        heroku_email: ${{secrets.HEROKU_EMAIL}}
