--- a/pom.xml
+++ b/pom.xml
@@ -102,17 +102,17 @@
             </exclusions>
         </dependency>
         <!-- This dependency includes the JPA CQL Server -->
-       <!-- <dependency>
+        <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-jpaserver-cql</artifactId>
             <version>${project.version}</version>
-        </dependency>-->
+        </dependency>
         <!-- This dependency includes the JPA MDM Server -->
-        <!-- <dependency>
+         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
             <artifactId>hapi-fhir-jpaserver-mdm</artifactId>
             <version>${project.version}</version>
-        </dependency> -->
+        </dependency> 
         <!-- This dependency is used for the "FHIR Tester" web app overlay -->
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
