--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         java-version: 11
     - name: Build with Maven
-      run: mvn -B package --file pom.xml --DskipTests
+      run: mvn -B package --file pom.xml -Dmaven.test.skip=true
     - name: deploy heroku
       uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
       with:
