--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,3 +28,4 @@ jobs:
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
         heroku_app_name: ${{secrets.HEROKU_APP_NAME_JAVA}}
         heroku_email: ${{secrets.HEROKU_EMAIL}}
+        procfile: /bin/sh /usr/local/tomcat/catalina-dynamic-port.sh
