changes image name

--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -17,8 +17,7 @@ jobs:
         uses: crazy-max/ghaction-docker-meta@v1
         with:
           images: |
-            ghcr.io/hapifhir/hapi
-            docker.io/hapiproject/hapi
+            jfcal/hapi
           tag-sha: false
           tag-match: "v(.*)"
       # waiting for https://github.com/crazy-max/ghaction-docker-meta/issues/13 for a cleaner solution
