change image build

--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: crazy-max/ghaction-docker-meta@v1
         with:
           images: |
-            jfcal/hapi
+            ${{ secrets.DOCKERHUB_USERNAME }}/hapi
           tag-sha: false
           tag-match: "v(.*)"
       # waiting for https://github.com/crazy-max/ghaction-docker-meta/issues/13 for a cleaner solution
@@ -26,8 +26,7 @@ jobs:
         uses: crazy-max/ghaction-docker-meta@v1
         with:
           images: |
-            ghcr.io/hapifhir/hapi
-            docker.io/hapiproject/hapi
+            ${{ secrets.DOCKERHUB_USERNAME }}/hapi
           tag-sha: false
           tag-match: "v(.*)"
           sep-tags: -distroless,
